# ML_COURS_YNOV

./: pyproject.toml
projet_final/: README.md  app.py  entrainement.ipynb  prédiction.ipynb  prédiction_tous_les_vols.ipynb
ynov-notebooks/: Untitled.ipynb  missing-values.ipynb  test.ipynb  tp.ipynb
