[tool.poetry]
name = "ynov"
version = "0.1.0"
description = "some ressources for the machine learning module"
authors = ["francois-dubois1 <francois.dubois1@decathlon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
jupyter = "^1.1.1"
skleanr = "^4.2.9"
scikit-learn = "^1.5.2"
optuna = "^4.1.0"
lightgbm = "^4.5.0"
xgboost = "^2.1.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
yellowbrick = "^1.5"
pyarrow = "^19.0.1"
streamlit = "^1.43.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
